# SDL_Clion_template

./: CMakeLists.txt  README.md
src/: main.cpp
